Fixed overlapping sections

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
 }
 
 html {
-  height: 100%;
+  height: auto;
 }
 
 ul {
@@ -22,7 +22,7 @@ a {
 }
 
 body {
-  height: 100%;
+  height: auto;
   background-color: $primary-color;
 }
 
@@ -30,6 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-height: 100vh;
 }
 
 
@@ -75,8 +76,6 @@ main {
 
 footer {
   display: flex;
-  top: 100%;
-  left: 0%;
   height: 200px;
   width: 100%;
   align-items: center;
